# lancell

./: .pre-commit-config.yaml  404.html  Cargo.toml  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  speed_testing.ipynb  testing_notebook.py
.claude/skills/gene-resolver/: SKILL.md
.claude/skills/gene-resolver/references/: api_reference.md
.claude/skills/gene-resolver/scripts/: resolve_genes.py  write_standardized_var.py
.claude/skills/genetic-perturbation-resolver/: SKILL.md
.claude/skills/genetic-perturbation-resolver/references/: api_reference.md
.claude/skills/genetic-perturbation-resolver/scripts/: resolve_genes.py
.claude/skills/geo-data-curator/: SKILL.md
.claude/skills/geo-data-curator/scripts/: assemble_fragments.py  validate_obs.py
.claude/skills/geo-data-preparer/: SKILL.md
.claude/skills/geo-data-preparer/scripts/: download_geo_file.py  list_geo_files.py  reconcile_barcodes.py  write_metadata_json.py
.claude/skills/molecule-resolver/: SKILL.md
.claude/skills/molecule-resolver/references/: api_reference.md
.claude/skills/molecule-resolver/scripts/: resolve_molecules.py
.claude/skills/ontology-resolver/: SKILL.md
.claude/skills/ontology-resolver/references/: api_reference.md
.claude/skills/ontology-resolver/scripts/: resolve_ontology.py
.claude/skills/protein-resolver/: SKILL.md
.claude/skills/protein-resolver/references/: api_reference.md
.claude/skills/protein-resolver/scripts/: finalize_features.py  resolve_proteins.py  write_standardized_var.py
.claude/skills/publication-resolver/: SKILL.md
.claude/skills/publication-resolver/scripts/: write_publication_json.py  write_publication_parquet.py
.github/workflows/: ci.yml  release.yml
array_storage/: index.html
atlas/: index.html
data_structure/: index.html
dataloader/: index.html
dex/: index.html
docs/: array_storage.md  atlas.md  data-model.md  data_structure.md  dataloader.md  feature_layouts.md  group_specs.md  index.md  querying.md  reconstructors.md  schemas.md  versioning.md
examples/cellxgene_census/: ingest.py  schema.py
examples/cellxgene_census_tiledb/: ingest.py  ingest_single_group.py  schema.py
examples/multimodal_perturbation_atlas/: schema.py
examples/scbasecount/: download.py  ingest.py  schema.py
feature_layouts/: index.html
group_specs/: index.html
lancell/: __init__.py  _rust.pyi  atlas.py  atlas_search.py  batch_array.py  batch_selection.py  builtins.py  dataloader.py  dataset_vars.py  feature_layouts.py  group_reader.py  group_specs.py  ingestion.py  ingestion_utils.py  multimodal.py  obs_alignment.py  protocols.py  query.py  read.py  reconstruction.py  sampler.py  schema.py  util.py  var_df.py
lancell/codecs/: bitpacking.py
lancell/dex/: __init__.py  _dex.py  _math.py  _numba_mwu.py  _ttest.py
lancell/fragments/: README.md  __init__.py  ingestion.py  peak_matrix.py  reconstruction.py
lancell/standardization/: __init__.py  _rate_limit.py  assemblies.py  genes.py  gget.py  guide_rna.py  metadata_table.py  molecules.py  ncbi.py  ontologies.py  perturbations.py  proteins.py  types.py
lancell/tools/: add_csc.py
lancell_examples/: pyproject.toml
lancell_examples/cellxgene_census_tiledb/: ingest_single_group.py
lancell_examples/lancell_examples/cellxgene_census_tiledb/: ingest.py
lancell_examples/lancell_examples/scbasecount/: download.py
lancell_examples/multimodal_perturbation_atlas/: README.md  __init__.py  atlas.py  explore_perturbation_atlas.py  genome_query.py  ingestion.py  interval_reconstruction.py  peak_matrix.py  query.py  schema.py  specs.py
lancell_examples/multimodal_perturbation_atlas/scripts/: create_indexes.py  ingest_GSE120861.py  ingest_GSE133344.py  ingest_GSE135497.py  ingest_GSE149383.py  ingest_GSE153056.py  ingest_GSE161002.py  ingest_GSE161824.py  ingest_GSE168851.py  ingest_GSE273677.py  ingest_GSE90546.py  ingest_GSE92872.py  ingest_GSM4150377.py  ingest_GSM4150378.py  ingest_GSM4150379.py  ingest_SCP1064.py  ingest_Tahoe100M.py  ingest_cpg0021_periscope.py  ingest_cpg0021_periscope_a549.py  ingest_figshare_20029387.py  init_atlas.py  migrate_Tahoe100M_from_s3.py  run_chromatin_accessibility.sh  run_cite_seq.sh  run_gene_expression.sh  snapshot_atlas.py
lancell_examples/scbasecount/: ingest.py
notebooks/: cellxgene_atlas_explorer.py  cellxgene_tiledb_vs_lancell_benchmark.py  csc_vs_csr_benchmark.py  scbasecount_ragged_atlas.py
querying/: index.html
reconstructors/: index.html
schemas/: index.html
scripts/: add_csc_to_atlas.py  dataloader_worker_benchmark.py  image_storage_benchmark_s3.py  image_storage_setup_s3.py  ingest_cellxgene_census.sh  migrate_dataset_vars_to_layouts.py  read_shard.py  simple_zarr_reading_test_s3.py  sparse_storage_benchmark.py  sparse_storage_benchmark_s3.py  sparse_storage_setup.py  sparse_storage_setup_s3.py  zarr_s3_diagnostic.py  zarr_s3_retrieval.py
search/: search_index.json
specs/: feature_identity_and_var_df.md  lancell_data_structure.md
src/: bitpacking.rs  csr_to_csc.rs  lib.rs
tests/: test_csr_to_csc.py  test_dataloader.py  test_dataset_vars.py  test_dex_integration.py  test_feature_layouts.py  test_stable_uid.py  test_uniform_atlas.py  test_var_df.py  test_versioning.py
versioning/: index.html
