[package]
name = "lancell"
version = "0.1.0"
edition = "2024"

[lib]
name = "_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
numpy = "0.27"
tokio = { version = "1", features = ["rt-multi-thread"] }
rayon = "1"

# zarrs for metadata + codec chain (no I/O at read time)
zarrs = { version = "0.23", default-features = false, features = ["async", "sharding", "zstd", "crc32c"] }
zarrs_object_store = "0.6"
# Accept any object_store backend from Python via obstore
pyo3-object_store = "0.8"

# Bitpacking codec
bitpacking = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CSR-to-CSC conversion
memmap2 = "0.9"
tempfile = "3"
