[project]
name = "lancell"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "h5py",
    "torch",
    "boto3",
    "pylance>=2.0.0",
    "lancedb",
    "marimo",
    "pandas",
    "pubmed-parser",
    "matplotlib",
    "scipy",
    "numba",
    "biopython",
    "datasets",
    "openpyxl",
    "scikit-learn",
    "polars",
    "anthropic",
    "gcsfs",
    "pydantic-ai-slim",
    "opencv-python",
    "anndata",
    "s3fs",
    "scanpy",
    "bionty",
    "mudata",
    "GEOparse",
    "obstore",
    "duckdb",
    "tifffile>=2026.3.3",
    "imagecodecs>=2026.1.14",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pre-commit",
]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "lancell._rust"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["notebooks/"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
