[project]
name = "lancell"
version = "0.1.1"
description = "Cell-centric ML training backend on LanceDB and sharded zarr"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anndata",
    "h5py",
    "lancedb",
    "mudata",
    "numpy",
    "obstore",
    "polars",
    "pydantic",
    "pyarrow",
    "pylance>=2.0.0",
    "scipy",
    "numba",
    "zarr",
]

[tool.uv.workspace]
members = ["lancell_examples"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
lancell-examples = { workspace = true }
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[project.optional-dependencies]
ml = [
    "torch",
]
bio = [
    "biopython",
    "GEOparse",
    "gget",
    "pronto",
    "pubmed-parser",
    "scanpy",
]
viz = [
    "marimo",
    "matplotlib",
]
io = [
    "boto3",
    "gcsfs",
    "s3fs",
    "opencv-python",
    "tifffile>=2026.3.3",
    "imagecodecs>=2026.1.14",
]
ai = [
    "anthropic",
    "pydantic-ai-slim",
]
all = [
    "lancell[ml,bio,viz,io,ai]",
    "datasets",
    "duckdb",
    "openpyxl",
    "pandas",
    "scikit-learn",
]
examples = [
    "lancell-examples",
]
dev = [
    "pytest",
    "ruff",
    "pre-commit",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/abi3-py312"]
module-name = "lancell._rust"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["notebooks/"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
