[project]
name = "lancell-examples"
version = "0.1.0"
description = "Example ingestion scripts for lancell"
requires-python = ">=3.12"
dependencies = [
    "lancell[all]",
]

[tool.uv.sources]
lancell = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
